--- a/css/styles.css
+++ b/css/styles.css
@@ -41,18 +41,34 @@ ul {
   margin-top: 0.5em;
   margin-left: 0.75em;
   font-size: 0.75em;
-  line-height: 1.125em;
 }
 
 .container {
   background-color: #fff;
 }
-
 #main_nav {
   color: #222;
   font-size: 0.8em;
 }
-#mn_right {
+/*#mn_right {
   flex-direction: row;
   float: right;
+}*/
+#pr_banner {
+  /*height: 3rem;*/
+  font-family: Arial;
+  font-weight: bold;
+  text-align: center;
+  color: #36b;
+}
+.welcome_bx {
+  margin: 0.4em;
+}
+#wlm_title {
+  text-align: center;
+  font-size: 120%;
+  padding: .1em;
+}
+#wl_1 {
+  font-size: 85%;
 }
