--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,8 @@ ul {
   color: #36b;
 }
 .welcome_bx {
+  display: block;
+  line-height: 1.6;
   margin: 0.4em;
 }
 #wlm_title {
@@ -70,5 +72,9 @@ ul {
   padding: .1em;
 }
 #wl_1 {
+  /*text-align: center;*/
   font-size: 85%;
+}
+#wl_2 {
+  font-size: 75%;
 }
